--- a/style/public .css
+++ b/style/public .css
@@ -203,3 +203,77 @@
 }
 
 /* 公共footer样式-end */
+
+/* view部分2/3级头部导航样式 */
+.view .header-view {
+    position: relative;
+    background-color: #252221;
+    height: auto;
+}
+
+.view-nav-fixed-wrap {
+    position: relative;
+}
+
+.nav-fixed {
+    position: fixed;
+    left: 0;
+    top: 0;
+    width: 100%;
+}
+
+.view .nav-lv1 {
+    overflow: hidden;
+    position: relative;
+}
+
+.view .nav-lv2 {
+    background-color: #ececec;
+    padding: 25px 0;
+}
+
+.view .nav-lv2 .nav-lv2-list {
+    text-align: center;
+}
+
+.view .nav-lv2 .nav-lv2-list a {
+    font-size: 14px;
+    font-family: PingFangSC-Regular, PingFang SC;
+    font-weight: 400;
+    color: rgba(123, 122, 121, 1);
+    /* line-height: 60px; */
+    margin-right: 40px;
+}
+
+.view .nav-lv2 .nav-lv2-list a:hover {
+    color: #ed7d31;
+}
+
+.nav-lv3 {
+    background-color: #f0f0f0;
+    padding: 25px 0;
+}
+
+.nav-lv3-list {
+    text-align: center;
+}
+
+.nav-lv3-list a {
+    font-size: 12px;
+    font-family: PingFangSC-Light, PingFang SC;
+    font-weight: 300;
+    color: rgba(123, 122, 121, 1);
+    margin-right: 20px;
+    display: inline-block;
+    margin-bottom: 15px;
+}
+
+.nav-lv3-list a:hover {
+    color: #ed7d31;
+}
+
+.selected {
+    color: #ed7d31 !important;
+}
+
+/* view部分2/3级头部导航样式-end */
