--- a/style/reset.css
+++ b/style/reset.css
@@ -1,4 +1,4 @@
-html, body, div, h1, h2, h3, h4, h5, h6, p, dl, dt, dd, ol, ul, li, fieldset, form, label, input, legend, table, caption, tbody, tfoot, thead, tr, th, td, textarea, article, aside, audio, canvas, figure, footer, header, mark, menu, nav, section, time, video { margin: 0; padding: 0; }
+html, body, div, h1, h2, h3, h4, h5, h6, p, dl, dt, dd, ol, ul, li, fieldset, form, label, input, legend, table, caption, tbody, tfoot, thead, tr, th, td, textarea, article, aside, audio, canvas, figure, footer, header, mark, menu, nav, section, time, video { margin: 0; padding: 0; box-sizing: border-box;}
 h1, h2, h3, h4, h5, h6 { font-size: 100%; font-weight: normal ;}
 article, aside, dialog, figure, footer, header, hgroup, nav, section, blockquote { display: block; }
 ul, ol { list-style: none; }
